fixed status scheduler to get last stage status and update